--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	background-color: #65350F;
+	background-color: #87CEEB;
 	background-image: url("doms.jpg");
 	background-size: 300px 100px;
 	text-align: center;
